fixed unwanted right blank on mobile view; removed overflow-x from body

--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -105,7 +105,7 @@ footer {
 
 /* Media Queries */
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 850px) {
   .links a {
     display: block;
     text-align: center;
@@ -114,10 +114,6 @@ footer {
   }
 
   .links img {
-	  /* justify-items: center; */
-	  /* margin-top: 20px; */
-	  /* margin-left: 20vw; */
-	  /* margin: 20px; */
   	margin: 20px 20vw;
   }
 
